--- a/01-ejercicio-html-css/styles.css
+++ b/01-ejercicio-html-css/styles.css
@@ -1,1 +1,378 @@
 /* Aquí el contenido de tu archivo styles.css */
+
+:root {
+  --background: #101922;
+  --text-primary: #fff;
+  --card-bg: #1e293b;
+  --primary-light: #09f;
+  --text-light: rgb(154, 154, 154);
+  --shadow: #0008;
+  --input-bg: #15232e;
+  --button-bg: rgb(62, 69, 99);
+  --border: rgba(255, 255, 255, 0.1);
+  --shadow: rgba(0, 0, 0, 0.3);
+  --svg-bg: #0153;
+  --button-bg-secondary: rgba(12, 38, 143, 0.694);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui, sans-serif;
+}
+
+
+
+body > header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  background-color: var(--background);
+  border-bottom: var(--border) 1px solid;
+  
+  h1{
+    font-size: 1.5rem;
+    color: var(--text-primary);
+    display: flex;
+    align-items: center;
+  }
+
+  svg{
+    width: 2rem;
+    height: 2rem;
+    color: var(--primary-light);
+    margin-right: 0.5rem;
+  }
+  
+  a{
+    text-decoration: none;
+    color: var(--text-light);
+    font-weight: 700;
+    margin: 1rem;
+
+    &:hover{
+      color: var(--primary-light);
+    }
+  }
+
+  button:first-child{
+    color: var(--primary-light);
+    background-color: var(--button-bg-secondary);
+
+    &:hover{
+      background-color: rgb(12, 38, 143);
+      color: #72cff9;
+    }
+  }
+
+  button:last-child{
+    margin-left: 0.5rem;
+
+    &:hover{
+      background-color: rgb(82, 90, 122);
+    }
+  }
+}
+
+body {
+  background-color: var(--background);
+  color: var(--text-primary);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  line-height: 1.5;
+}
+
+main > section:nth-child(1) {
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  
+  & > .background-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    mask-image: linear-gradient(to bottom, rgba(16, 25, 34, 1) 5%, rgba(16, 25, 34, 0) 80%);
+  }
+
+  h1 + p{
+    margin-bottom: 1rem;
+  }
+
+  h1{
+    font-size: 3rem;
+  }
+}
+
+main > section:nth-child(2){
+
+  margin-top: 5rem;
+  text-align: center;
+
+  header > p{
+    color: var(--text-light);
+    margin-bottom: 3rem;
+    margin-top: 1rem;
+  }
+
+  header > h2{
+    font-size: 1.875rem;
+    font-weight: 700;
+    color: var(--text-primary);
+  } 
+
+  footer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
+    padding: 2rem;
+    margin-bottom: 30px;
+
+    article {
+      background-color: var(--card-bg);
+      padding: 2rem;
+      margin-bottom: 16px;
+      border-radius: 0.5rem;
+      box-shadow: 0 1px 3px 0 var(--shadow);
+      text-align: center;
+
+      p{
+        color: var(--text-light);
+      }
+
+      h3{
+        font-weight: 600;
+        font-size: larger;
+        margin-bottom: 0.5rem;
+      }
+
+      svg {
+        color: var(--primary-light);
+        background: var(--svg-bg);
+        border-radius: 100%;
+        width: 64px;
+        height: 64px;
+        padding: 1rem;
+        margin-bottom: 0.5rem;
+      }
+    }
+  }
+}
+
+form{
+  max-width: 42rem;
+  width: 100%;
+  padding: 0.5rem;
+  display: flex;
+  box-shadow: 0 10px 15px -3px var(--shadow);
+  background-color: var(--input-bg);
+  border-radius: 0.5rem;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+
+  div{
+    display: flex;
+  }
+
+  svg{
+    color: var(--text-light);
+    width: 1.3rem;
+  }
+
+  input {
+    background: none;
+    border: none;
+    font-size: 1rem;
+    color: var(--text-light);
+    margin-left: 1rem;
+    width: 100%;
+    outline: none;
+    font-family: inherit;
+    color: var(--text-primary) ;
+  }
+
+  button{
+    display: flex;
+    align-items: center;
+    background-color: rgb(22, 124, 207);
+
+    &:hover{
+      background-color: rgb(2, 101, 165);
+    }
+  }
+  
+}
+
+button{
+  background-color: var(--button-bg);
+  color: var(--text-primary);
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 1px 3px 0 var(--shadow);
+  border: none;
+  font-weight: 700;
+  font-size: medium;
+  cursor: pointer;
+}
+
+body > footer{
+  border-top: var(--border) 1px solid;
+  text-align: center;
+  padding: 2rem;
+  font-size: medium;
+  color: var(--text-light);
+}
+
+/* Página empleos */
+
+.seccion-busqueda-empleos{
+  margin-top: 2rem;
+  height: auto !important;
+
+  p{
+    color:var(--text-light);
+    margin-bottom: 2rem !important;    
+  }
+
+  form{
+    max-width: 1280px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background: none;
+    box-shadow: none;
+
+    .barra-busqueda-empleo {
+      background: var(--input-bg);
+      padding: 1rem 1rem;
+      border: rgba(128, 128, 128, 0.263) 1px solid;
+      border-radius: .5rem;
+      width: 100%;
+
+    }
+
+    .filtros-busqueda-empleo{
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: 1rem;
+      gap: 1rem;
+
+      select{
+        background-color: var(--button-bg);
+        border-radius: 0.5rem;
+        border: none;
+        color: var(--text-primary);
+        padding: 0.5rem;;
+        font-size: 1rem;
+        font-family: inherit;
+        cursor: pointer;
+
+      }
+    }
+  }
+}
+
+.seccion-resultados-empleos{
+  
+  max-width: 1280px;
+  margin: 0 auto;
+  margin-top: 0.5rem !important;
+  display: flex;
+  flex-direction: column;
+
+  h2{
+    margin-bottom: 1rem;
+    text-align: left;
+  }
+
+  .jobs-listings{
+    border: 1px solid rgba(255, 255, 255, .3);
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    
+    article{
+      padding: 1.5rem;
+      border-bottom: 1px solid rgba(255, 255, 255, .3);
+      display: flex;
+      text-align: left;
+
+      div{
+        flex-direction: column;
+        margin-right: 2rem;
+
+        small{
+          font-size: .875rem;
+          opacity: .75;
+        }
+
+        p{
+          margin-top: 0.5rem;
+        }
+      }
+
+      button{
+        height: 40px;
+        margin-right: 1rem;
+
+        &:hover{
+          background-color: rgb(2, 101, 165);
+        }
+      }
+    }
+
+    article:last-child{
+      border-bottom: none;
+    }
+  }
+
+  .paginacion{
+
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin: 2rem 0;
+
+    a{
+      text-decoration: none;
+      color: var(--text-primary);
+      width: 2.5rem;
+      height: 2.5rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 0.375rem;
+      transition: all .3s;
+
+      &:hover, &:focus {
+        background-color: var(--primary-light);
+      }
+
+      &.is-active {
+        background-color: var(--primary-light);
+        pointer-events: none;
+      }
+
+      &:active {
+        transform: scale(0.70);
+      }
+    }
+  }
+}
+
+.button-apply-job{
+  background-color: rgb(22, 124, 207);
+
+  &.is-applied{
+    background-color: #4caf50;
+    pointer-events: none;
+  }
+}
